--- a/lab-michael/package.json
+++ b/lab-michael/package.json
@@ -10,7 +10,8 @@
     "build": "webpack",
     "build-watch": "webpack-dev-server --inline --hot",
     "test": "karma start --single-run",
-    "test-watch": "karma start"
+    "test-watch": "karma start",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -32,7 +33,7 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
-    "camelcase": "^4.0.0",
+    "camelcase": "^3.0.0",
     "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
     "dotenv": "^4.0.0",
@@ -40,6 +41,7 @@
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.26.0",
+    "ng-file-upload": "^12.2.13",
     "node-sass": "^4.3.0",
     "pascalcase": "^0.1.1",
     "resolve-url-loader": "^1.6.1",
@@ -51,6 +53,7 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.6.1",
+    "eslint": "^3.18.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.4.0",
     "karma-jasmine": "^1.1.0",
